Fixed glitch when closing theme selector on mobile

--- a/www/style-brutalist.linux.css
+++ b/www/style-brutalist.linux.css
@@ -2798,7 +2798,7 @@ div > .MJXc-display {
 		top 0.2s ease,
 		max-height 0.2s ease,
 		visibility 0.2s ease;
-	top: calc(100% - 20px);
+	top: calc(100% + 10px);
 	left: 0;
 	right: 0;
 	margin: auto;
