--- a/www/style-less.windows.css
+++ b/www/style-less.windows.css
@@ -2798,7 +2798,7 @@ div > .MJXc-display {
 		top 0.2s ease,
 		max-height 0.2s ease,
 		visibility 0.2s ease;
-	top: calc(100% - 20px);
+	top: calc(100% + 10px);
 	left: 0;
 	right: 0;
 	margin: auto;
@@ -3965,7 +3965,7 @@ body {
 }
 #nav-item-search button {
 	border: none;
-	font-weight: inherit;
+	font-weight: 300;
 	padding: 6px;
 	height: 23px;
 }
